# com-x-parser

./: .env-example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py  main.py  utils.py
src/modules/: __init__.py  auth.py  downloader.py  parser.py
